# chromaconsole

./: .gitignore  bit.py  build.py  test.py  test2.py
package/: .pypirc  .pypirch  README.md  pyproject.toml
package/src/chromaconsole/: Color.py  Color_Text.py  Color_background.py  Keyboard.py  Style.py  __init__.py  __main__.py  chromaconsole.py
package/src/chromaconsole.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
uppcoming/: alternative font.py  gradient.py  ideogram.py  keypad.py  test.py  underline color.py
