[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromaconsole"
version = "0.2.7.2"
authors = [
  {name="Umit Tasdelen", email="umittadelen1277@gmail.com"},
]
description = "a small colorfull module"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/umit-09/chromaconsole"
"Bug Tracker" = "https://github.com/umit-09/chromaconsole/issues"