[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromaconsole"
version = "0.3.5.4"
authors = [
  {name = "Umit Tasdelen", email = "umittadelen1277@gmail.com"}
]
description = "A small colorful module to change text colors in terminal"
keywords = ["color", "console", "terminal", "text", "style"]
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/umit-09/chromaconsole"
Bug_Tracker = "https://github.com/umit-09/chromaconsole/issues"
